@@ -158,7 +158,7 @@ enum {
     FORMAT_SVGA_NONCOMPRESSED_1,
     FORMAT_SVGA_NONCOMPRESSED_2,
     /* 3 reserved formats */
-    FORMAT_STILL_IMAGE= 390,
+    FORMAT_STILL_IMAGE,
     FORMAT_SCALABLE_IMAGE_SIZE
 };
 #define FORMAT_MIN                  FORMAT_VGA_NONCOMPRESSED
